# garro

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/.scripts/: install_tools.sh
include/garro/: buffer_policy.hpp  column.hpp  garro.hpp  nimbus.hpp
include/garro/arrow/: buffer_policy.hpp  column.hpp  writer.hpp
include/garro/csv/: writer.hpp
include/garro/sqlite/: writer.hpp
src/: CMakeLists.txt  garro.cpp
